ingress/couchpotato-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"couchpotato-service","namespace":"kube-system"},"spec":{"ports":[{"nodePort":32403,"port":5050,"protocol":"TCP"}],"selector":{"app":"couchpotato"},"type":"NodePort"}}
  name: couchpotato-service
  namespace: kube-system
spec:
  clusterIP: 10.105.63.123
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32403
    port: 5050
    protocol: TCP
    targetPort: 5050
  selector:
    app: couchpotato
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
