ingress/couchpotato-ing.yaml

  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: couchpotato
    namespace: kube-system
  spec:
    rules:
      - host: k8sw1
        http:
          paths:
          - backend:
              serviceName: couchpotato-service
              servicePort: 80
            path: /foo
    # This section is only required if TLS is to be enabled for the Ingress
#     tls:
#         - hosts:
#             - www.example.com
#           secretName: example-tls
#
# If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
#
#   apiVersion: v1
#   kind: Secret
#   metadata:
#     name: example-tls
#     namespace: foo
#   data:
#     tls.crt: <base64 encoded cert>
#     tls.key: <base64 encoded key>
#   type: kubernetes.io/tls
