ingress/sample-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-default-backend-ingress
spec:
  backend:
    serviceName: default-backend-svc
    servicePort: 8080
