ingress/single-default-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-default-backend-ingress
spec:
  backend:
    serviceName: couchpotato-service
    servicePort: 80
